added list item drag and drop feature

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+  <div class="box-left jsBoxLeft">
+    <ul role="list">
+      <li draggable="true"><i class="fa-solid fa-grip-vertical"></i>List Item 1</li>
+      <li draggable="true"><i class="fa-solid fa-grip-vertical"></i>List Item 2</li>
+      <li draggable="true"><i class="fa-solid fa-grip-vertical"></i>List Item 3</li>
+      <li draggable="true"><i class="fa-solid fa-grip-vertical"></i>List Item 4</li>
+    </ul>
+  </div>
+  <div class="box-right jsBoxRight">
+    <ul role="list">
+    </ul>
+  </div>
   <script src="./script.js"></script>
 </body>
 
